--- a/src/components/Anmeldelser.astro
+++ b/src/components/Anmeldelser.astro
@@ -11,13 +11,13 @@ import Link from '../components/Link.astro';
     <div class="flex justify-between items-center mb-8">
       <!-- Piletaster -->
       <div class="flex gap-4">
-  <Button variant="secondary"></Button>
-  <Button></Button>
+  <Button variant="back"></Button>
+  <Button variant="primary" ></Button>
       </div>
       <!-- Titel -->
       <h3 class="text-2xl md:text-3xl font-semibold">Anmeldelser</h3>
       <!-- Vinshop Knap -->
-                     <a href="/"><Button>Se Trustpilot</Button></a>
+                     <a href="/"><Button variant="primary" >Se Trustpilot</Button></a>
 
     </div>
 
