--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -9,6 +9,7 @@ const buttonStyling =
 const variantClasses = {
   primary: "border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors",
   secondary: "border-creamywhite hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors",
+  back:"border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors"
 };
 
 ---
@@ -16,17 +17,17 @@ const variantClasses = {
  <button class:list={[buttonStyling, variantClasses[variant],]}>
     <slot></slot>
     <!-- SVG med rotation og fill ændring -->
-    <svg
-      class={`w-4 h-4 md:w-6 md:h-6 transition-colors group-hover:fill-creamywhite ${
-        variant === "back" ? "rotate-180" : ""
-      }`}
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 13 8"
-    >
-      <path
-        d="M11.9786 4.35355C12.1738 4.15829 12.1738 3.84171 11.9786 3.64645L8.79657 0.464466C8.60131 0.269204 8.28473 0.269204 8.08947 0.464466C7.8942 0.659728 7.8942 0.976311 8.08947 1.17157L10.9179 4L8.08947 6.82843C7.8942 7.02369 7.8942 7.34027 8.08947 7.53553C8.28473 7.7308 8.60131 7.7308 8.79657 7.53553L11.9786 4.35355ZM0 4.5L11.625 4.5V3.5L0 3.5L0 4.5Z"
-        fill="currentColor"
-      />
-    </svg>
+<svg
+  class={`w-4 h-4 md:w-6 md:h-6 transition-transform group-hover:fill-creamywhite ${
+    variant === "back" ? "rotate-180" : "rotate-0"
+  }`}
+  xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 13 8"
+>
+  <path
+    d="M11.9786 4.35355C12.1738 4.15829 12.1738 3.84171 11.9786 3.64645L8.79657 0.464466C8.60131 0.269204 8.28473 0.269204 8.08947 0.464466C7.8942 0.659728 7.8942 0.976311 8.08947 1.17157L10.9179 4L8.08947 6.82843C7.8942 7.02369 7.8942 7.34027 8.08947 7.53553C8.28473 7.7308 8.60131 7.7308 8.79657 7.53553L11.9786 4.35355ZM0 4.5L11.625 4.5V3.5L0 3.5L0 4.5Z"
+    fill="currentColor"
+  />
+</svg>
   </button>
 </div>
