--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -159,7 +159,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
           La Mancha, Spanien <span class="">2018</span>
         </h3>
         <div class="mt-4">
-          <Button class="border-creamywhite">Køb nu</Button>
+          <Button variant="secondary">Køb nu</Button>
         </div>
       </div>
 
