--- a/src/components/Anmeldelser.astro
+++ b/src/components/Anmeldelser.astro
@@ -2,6 +2,8 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
 import Link from '../components/Link.astro';
+import stjerne1 from "../assets/images/stjerne1.svg";
+import stjerne2 from "../assets/images/stjerne2.svg";
 ---
 
 
@@ -26,8 +28,8 @@ import Link from '../components/Link.astro';
         <!-- Review 1 -->
         <div class="text-center space-y-4 flex flex-col justify-between h-full">
           <div>
-            <div class="flex justify-center text-black">
-              ★★★★★
+            <div class="flex justify-center text-black py-2">
+    <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Enkel og overkommelig luksus</p>
             <p class="text-smb md:text-s leading-relaxed">
@@ -40,8 +42,8 @@ import Link from '../components/Link.astro';
         <!-- Review 2 -->
         <div class="text-center space-y-4 flex flex-col justify-between h-full">
           <div>
-            <div class="flex justify-center text-black">
-              ★★★★★
+          <div class="flex justify-center text-black py-2">
+    <img class="" src={stjerne2.src} alt="4 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Perfekt til vinelskeren på budget</p>
             <p class="text-smb md:text-s leading-relaxed">
@@ -54,8 +56,8 @@ import Link from '../components/Link.astro';
         <!-- Review 3 -->
         <div class="text-center space-y-4 flex flex-col justify-between h-full">
           <div>
-            <div class="flex justify-center text-black">
-              ★★★★☆
+      <div class="flex justify-center text-black py-2">
+    <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Nemt og fleksibelt</p>
             <p class="text-smb md:text-s">
@@ -68,8 +70,8 @@ import Link from '../components/Link.astro';
         <!-- Review 4 -->
         <div class="text-center space-y-4 flex flex-col justify-between h-full">
           <div>
-            <div class="flex justify-center text-black">
-              ★★★★★
+      <div class="flex justify-center text-black py-2">
+    <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Fik mig til at prøve nye vine</p>
             <p class="text-smb md:text-s">
