--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,8 +31,8 @@ import login from '../assets/images/login.svg';
   </a>
   <div class="absolute hidden group-hover:block bg-creamywhite pt-2 w-40">
     <a href="/rodwin" class="block px-4 py-2 hover:underline">Rødvinskasse</a>
-    <a href="/abonnement/hvidvinskasse" class="block px-4 py-2 hover:underline">Hvidvinskasse</a>
-    <a href="/abonnement/mixkasse" class="block px-4 py-2 hover:underline">Mixkasse</a>
+    <a href="/rodwin" class="block px-4 py-2 hover:underline">Hvidvinskasse</a>
+    <a href="/rodwin" class="block px-4 py-2 hover:underline">Mixkasse</a>
   </div>
 </div>
 
