--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import hero2 from "../assets/images/hero1.webp"
 <section class=" text-brown mb-12 md:mb-28">
   <!-- Heading -->
   <div class="mx-auto px-4 md:px-6">
-    <h3 class="pb-8">
+    <h3 class="">
 Med vores vinabonnement får du mulighed for at smage forskellige vine hver måned. Vi udvælger og sammensætter tre forskellige vinkasser, som du kan vælge imellem.    </h3>
   </div>
 
@@ -195,27 +195,27 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 <!-- Vinklub section -->
 
 <section class="">
-  <div class=" md:mt-10 mb-12 mt-12 md:mb-10 mx-auto grid grid-cols-1 md:grid-cols-5 items-center gap-8">
+  <div class=" md:mt-20 mb-12 mt-12 md:mb-20 mx-auto grid grid-cols-1 md:grid-cols-7 items-center gap-8">
     <!-- Venstre Content -->
-    <div class="md:col-span-2">
-      <p class=" ml-6 md:mr-0 md:ml-16 text-m md:text-l">
+    <div class="md:col-span-3 ml-6 md:ml-16">
+      <p class="  text-m md:text-l">
         Vin på abonnement
       </p>
-      <h2 class="flex ml-6 md:ml-16 uppercase mb-2  ">
+      <h2 class="flex  uppercase mb-2  ">
         Oplev vores vinklub
       </h2>
-      <p class="ml-6 md:ml-16 text-mmb md:text-m mr-6 md:mr-0 ">
+      <p class=" text-mmb md:text-m mr-6 md:mr-0 ">
         Når du bliver abonnent hos os, bliver du samtidig en del af vores vinklub.  Vi mødes én gang hver måned og smager på næste måneds vin, så du får mulighed for at tilpasse din næste vinkasse til dine ønsker og behov. Derudover udveksler vi erfaringer og viden om vin og har nogle hyggelige stunder sammen.
       </p>     
     
-        <div class="mt-4 ml-6 md:ml-16">
+        <div class="mt-4 ">
               <Button>Bliv abonnent</Button>
         </div>
 
     </div>
 
     <!-- Højre Image -->
-    <div class="flex justify-center md:col-span-3">
+    <div class="flex justify-center md:col-span-3 md:col-start-5 mr-6 md:mr-16 ">
 			<img class="md:object-cover :w-full h-auto" src={bordvin.src} alt="Bord med vinglas">
     </div>
   </div>
