--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 			<Header></Header>
 		</header>
 		
-		<main class="px-1 md:px-3"> 
+		<main class=""> 
 			<slot />
 		</main>
 
