--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -13,13 +13,13 @@ import Abonnementcard from "../components/abonnementcard.astro";
 
 ---
 <MainLayout title="Vinabonnement">
-	<article class="mx-auto">
+	<article class="">
 
 															    <!-- VINABONNEMENTER DISPLAY -->
 <section class="">
-  <div class="mx-auto">
+  <div class="">
 
-    <h1 class="text-3xl md:text-4xl font-bold">
+    <h1 class="ml-90">
       VINABONNEMENT
     </h1>
 
