--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -15,7 +15,7 @@ import Anmeldelser from "../components/Anmeldelser.astro";
 ---
 <MainLayout title="Titel">
 	<article class="mx-auto">
-   <h1 class="uppercase mb-12">
+   <h1 class="ml-16 mb-12">
       Vinabonnement
     </h1>	
 <section class="">
@@ -56,9 +56,9 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
       <!-- Navigation -->
       <div class="relative border-b border-gray-300">
         <!-- Tal indicator -->
-        <div class="grid grid-cols-4">
+        <div class="grid grid-cols-4 ml-4">
           <div
-            class="text-[2rem] font-medium nav-item"
+            class="text-[2rem] nav-item"
             data-target="1"
           >
             NO 1.
