--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -58,18 +58,18 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 
                                                                <!-- Abonnement beskrivelse-->
   <!-- Dynamisk section  -->
-  <section id="dynamicContent" class="bg-red-700 text-white py-8 px-8 hidden md:block">
+  <section id="dynamicContent" class="bg-brown text-creamywhite py-8 px-8 hidden md:block">
     <div class="mx-auto grid grid-cols-1 md:grid-cols-5 gap-8">
       <!-- Venstre Content -->
       <div class="md:col-span-3">
-        <h3 id="contentTitle" class="text-3xl md:text-4xl leading-tight">
+        <h3 id="contentTitle" class="text-creamywhite">
     Denne måneds rødvinskasse
         </h3>
           <p id="contentDescription" class="text-mmb md:text-l leading-relaxed">
 Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!        </p>
     
         <div class="mt-4">
-          <Button>Køb nu</Button>
+          <Button variant="secondary">Køb nu</Button>
         </div>
       </div>
 
