--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -3,8 +3,6 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
 import Link from '../components/Link.astro';
 import { Image } from 'astro:assets';
-import thumbsup from "../assets/images/thumbsup.png";
-import collage from "../assets/images/collage.png"
 import omostegning from "../assets/images/om-os-tegning.svg";
 import omos from "../assets/images/om.webp";
 import fbicon from "../assets/images/fb.svg"
@@ -15,18 +13,18 @@ import igicon from "../assets/images/ig.svg"
   <article class="mx-auto px-4 md:px-8 py-8">
 
     <!-- Første Sektion -->
-    <section class="grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
-      <!-- Venstre Indhold -->
-      <div>
-        <h1 class="text-3xl md:text-4xl font-bold uppercase text-red-600 mb-6">
+	     <h1 class="mb-6">
           Om ExploreWines
         </h1>
+    <section class="grid grid-cols-1 md:grid-cols-2 md:gap-36 items-start">
+      <!-- Venstre Indhold -->
+      <div class="order-2 md:order-1">
         <p class="text-smb md:text-m leading-relaxed mb-6">
 Hos Explorewines er vores mission at pirre dine smagsløg og give dig unikke vinoplevelser. Brug vores månedskasse til at opdage nye favoritter, hold vinsmagninger med vennerne, eller glæd dig over valgfriheden i vinreolen, når det er tid til at finde den perfekte flaske til weekenden. Vores mål er at levere kvalitetsvine, der giver dig lyst til en slurk mere – fordi de smager fantastisk og samtidig er rimelige i pris.<br>
 
 <br>Explorewines samarbejder primært med små, lokale producenter, der skaber vine med personlighed og sjæl – og som du sjældent finder på supermarkedshylderne. Vi prioriterer altid kvalitet først og har en særlig forkærlighed for økologiske vine.<br>
 
-<br>Har du spørgsmål til os er du velkommen til at kontakte os via knappen nedenfor.        </p>
+<br>Har du spørgsmål til os er du velkommen til at kontakte os via knappen nedenfor.</p>
         <Button>Kontakt</Button>
 
           <!-- Accordion component -->
@@ -177,10 +175,14 @@ Vi har sat prisen for vinkasserne inklusive levering til kr. 599,- og vi kan gar
 
       </div>
 
-      <!-- Højre Billede -->
-      <div class="flex justify-center items-center">
-        <img src={omos.src} alt="Vinflasker" class="w-full h-auto object-fit md:h-[900px]">
-      </div>
+  <!-- Højre Billede -->
+<div class="flex justify-center items-center order-1 md:order-2">
+  <img 
+    src={omos.src} 
+    alt="Vinflasker" 
+    class="w-full h-auto md:max-w-[900px] object-contain"
+  >
+</div>
     </section>
 
     <!-- Anden Sektion -->
