--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -14,7 +14,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 ---
 <MainLayout title="Vinabonnement">
 	<article class="">
-    <h1 class="ml-6">
+    <h1 class="mb-12 md:ml-8 ml-8 md:mt-24 mt-16">
       VINABONNEMENT
     </h1>
 															    <!-- VINABONNEMENTER DISPLAY -->
