--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,7 +108,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 <section class=" text-brown border-y mt-20 md:mt-0">
   <div class="mx-auto">
     <!-- Top Sektion: Navigation og Titel -->
-    <div class="flex justify-between items-center md:mb-8">
+    <div class="mt-6 flex justify-between items-center md:mb-8">
       <!-- Piletaster -->
       <div class="flex gap-4">
   <Button variant="back"></Button>
@@ -122,9 +122,9 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
     </div>
 
     <!-- Produkt Grid -->
-    <div class="grid grid-cols-3 lg:grid-cols-5 gap-6 mt-10">
+    <div class="grid grid-cols-3 lg:grid-cols-5 gap-6 mt-10 md:mb-12 ">
       <!-- Produkt 1 -->
-      <div class="text-center">
+      <div class="text-center h-full">
         <img
           src={vin1.src}
           alt="Jongieux Blanc"
@@ -133,11 +133,11 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <p class="text-mmb md:text-m">
           2023 Jongieux Blanc, Vin De Savoie AOC, Frankrig
         </p>
-        <p class="text-smb md:text-s">450 DKK (6 stk.)</p>
+        <p class="text-smb md:text-s mt-2">450 DKK (6 stk.)</p>
       </div>
 
       <!-- Produkt 2 -->
-      <div class="text-center">
+      <div class="text-center h-full">
         <img
           src={vin2.src}
           alt="Ikon Alvarinho"
@@ -146,11 +146,11 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <p class="text-mmb md:text-m">
           2020 Ikon, Alvarinho, Fiuza, Tejo, Portugal
         </hp>
-        <p class="text-smb md:text-s">1074 DKK (6 stk.)</p>
+        <p class="text-smb md:text-s mt-2 ">1074 DKK (6 stk.)</p>
       </div>
 
       <!-- Produkt 3 -->
-      <div class="text-center">
+      <div class="text-center h-full">
         <img
           src={vin3.src}
           alt="Canallas Vino Blanco"
@@ -159,11 +159,11 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <p class="text-mmb md:text-m">
           2023 Canallas Vino Blanco, Valencia DOP, Spanien
         </p>
-        <p class="text-smb md:text-s">450 DKK (6 stk.)</p>
+        <p class="text-smb md:text-s mt-2">450 DKK (6 stk.)</p>
       </div>
 
       <!-- Produkt 4 -->
-      <div class="hidden md:block text-center">
+      <div class="hidden md:block text-center h-full">
         <img
           src={vin4.src}
           alt="Vin d'Orange"
@@ -172,11 +172,11 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <p class="text-mmb md:text-m">
           2023 Vin d'Orange, DR, Øst Frankrig
         </p>
-        <p class="text-smb md:text-s">659 DKK (6 stk.)</p>
+        <p class="text-smb md:text-s mt-2">659 DKK (6 stk.)</p>
       </div>
 
       <!-- Produkt 5 -->
-      <div class="hidden md:block text-center">
+      <div class="hidden md:block text-center h-full">
         <img
           src={vin5.src}
           alt="Zolla Salice Salentino"
@@ -185,7 +185,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <p class="text-mmb md:text-m">
           2021 Zolla, Salice Salentino DOP, Italien
         </hp>
-        <p class="text-smb md:text-s">450 DKK (6 stk.)</p>
+        <p class="text-smb md:text-s mt-2">450 DKK (6 stk.)</p>
       </div>
     </div>
   </div>
@@ -222,7 +222,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 </section>
 
   																<!-- Nyhedsbrev section -->
-												<section class="">
+		<section class="md:mt-36 md:mb-36 md:pl-10">
   <div class="mx-auto grid grid-cols-1 md:grid-cols-2 items-center md:gap-14 gap-8">
     <!-- Venstre Content -->
 	   <div class="flex justify-center">
