--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -40,7 +40,7 @@ Hos Explorewines er vores mission at pirre dine smagsløg og give dig unikke vin
                            :aria-expanded="expanded"
                            aria-controls="faqs-text-01"
                        >
-                           <span>BAGGRUND:</span>
+                           <span>BAGGRUND</span>
                            <svg class="black shrink-0 ml-8" width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                <rect y="7" width="24" height="2" rx="1" class="transform origin-center transition duration-200 ease-out" :class="{'!rotate-180': expanded}" />
                                <rect y="7" width="24" height="2" rx="1" class="transform origin-center rotate-90 transition duration-200 ease-out" :class="{'!rotate-180': expanded}" />
@@ -72,7 +72,7 @@ Vi har haft base i Aarhus siden 2006, hvor Jens Peter Lund grundlagde Explorewin
                            :aria-expanded="expanded"
                            aria-controls="faqs-text-01"
                        >
-                           <span>MISSION:</span>
+                           <span>MISSION</span>
                            <svg class="black shrink-0 ml-8" width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                <rect y="7" width="24" height="2" rx="1" class="transform origin-center transition duration-200 ease-out" :class="{'!rotate-180': expanded}" />
                                <rect y="7" width="24" height="2" rx="1" class="transform origin-center rotate-90 transition duration-200 ease-out" :class="{'!rotate-180': expanded}" />
@@ -105,7 +105,7 @@ Vi har sat prisen for vinkasserne inklusive levering til kr. 599,- og vi kan gar
                            :aria-expanded="expanded"
                            aria-controls="faqs-text-01"
                        >
-                           <span>VORES KONCEPT:</span>
+                           <span>VORES KONCEPT</span>
                            <svg class="black shrink-0 ml-8" width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                <rect y="7" width="24" height="2" rx="1" class="transform origin-center transition duration-200 ease-out" :class="{'!rotate-180': expanded}" />
                                <rect y="7" width="24" height="2" rx="1" class="transform origin-center rotate-90 transition duration-200 ease-out" :class="{'!rotate-180': expanded}" />
@@ -141,7 +141,7 @@ Vi har sat prisen for vinkasserne inklusive levering til kr. 599,- og vi kan gar
                            :aria-expanded="expanded"
                            aria-controls="faqs-text-01"
                        >
-                           <span>KONTAKT OS:</span>
+                           <span>KONTAKT OS</span>
                            <svg class="black shrink-0 ml-8" width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                <rect y="7" width="24" height="2" rx="1" class="transform origin-center transition duration-200 ease-out" :class="{'!rotate-180': expanded}" />
                                <rect y="7" width="24" height="2" rx="1" class="transform origin-center rotate-90 transition duration-200 ease-out" :class="{'!rotate-180': expanded}" />
