--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -122,7 +122,7 @@ Leveringsdag: Sidste torsdag i måneden </p>
     {
       title: "Rødvinskasse",
       description:
-        "Vores RødvinTag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!skasse giver dig en nøje udvalgt samling af de bedste røde vine fra hele verden.",
+        "Med rødvinskassen får du rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!",
     },
     {
       title: "Hvidvinskasse",
