--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -8,8 +8,10 @@ const buttonStyling =
 // border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors
 const variantClasses = {
   primary: "border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors",
-  secondary: "border-creamywhite hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors",
-  back:"border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors"
+  secondary: "border-creamywhite hover:bg-brown hover:text-creamywhite hover:border-brown transition-colors",
+  back:"border-none hover:bg-orange hover:text-creamywhite hover:border-none transition-colors",
+  forward:"border-none hover:bg-orange hover:text-creamywhite hover:border-none transition-colors"
+
 };
 
 ---
