--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,12 +23,45 @@ import vin4 from "../assets/images/vin4.webp"
 import vin5 from "../assets/images/vin5.webp"
 import hero1 from "../assets/images/endelig1.webp"
 import hero2 from "../assets/images/hero1.webp"
+import herotextfulg from "../assets/images/herotextfulg.svg"
+
 
 ---
 <MainLayout title="Titel">
-	<article class="mx-auto">
+	<article class="">
 																	 <!-- Hero section  -->
+<section class="relative">
+  <!-- Grid container -->
+  <div class="grid grid-cols-12 grid-rows-5 gap-0 max-h-screen">
 
+    <!-- Venstre side (forskudt nedad ved højere grid row) -->
+     
+    <div class="col-span-6 row-start-1 row-span-4 relative">
+      <img 
+        src={hero2.src} 
+        alt="Venstre billede"
+        class="object-cover w-full h-full"
+      >
+    </div>
+   <!-- Overlay Tekst Knappen -->
+      <div class="col-span-6 text-brown place-content-center place-items-center">
+       <p class="text-[2rem]">
+          UDFORSK UDVALG 
+          <span class="text-xl">&rarr;</span> <!-- Pilen -->
+       </p>
+      </div>
+    <!-- Højre side (starter i grid row 1) -->
+     
+    <div class="col-span-6 row-start-2 row-span-5 relative z-10">
+      <img 
+        src={hero1.src} 
+        alt="Højre billede"
+        class="object-cover w-full h-full"
+      >
+    </div>
+
+  </div>
+</section>
 
 
 
@@ -36,13 +69,13 @@ import hero2 from "../assets/images/hero1.webp"
 
 <section class=" text-brown mb-12 md:mb-28">
   <!-- Heading -->
-  <div class="mx-auto px-4 md:px-6">
+  <div class=" px-4 md:px-6">
     <h3 class="">
 Med vores vinabonnement får du mulighed for at smage forskellige vine hver måned. Vi udvælger og sammensætter tre forskellige vinkasser, som du kan vælge imellem.    </h3>
   </div>
 
   <!-- Abonnenter -->
-  <!-- <div class="mx-auto grid grid-cols-1 md:grid-cols-3 gap-16">
+  <!-- <div class=" grid grid-cols-1 md:grid-cols-3 gap-16">
     <div class="">
 	<img class="md:object-cover md:w-full md:h-full" src={tegning1.src} alt="rødvinskasse">
   <div class="pl-4 md:pl-6"> 
@@ -71,7 +104,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
     </div>
   </div> -->
 
-<div class="mx-auto grid grid-cols-1 md:grid-cols-3 gap-16 place-content-between">
+<div class=" grid grid-cols-1 md:grid-cols-3 gap-16 place-content-between">
   <!-- Rødvinskasse -->
   <div class="flex flex-col">
     <img class="w-[80%] h-[90%] object-contain" src={tegning1.src} alt="rødvinskasse">
@@ -106,7 +139,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
   																<!-- Shop section -->
 <!-- Vinsektion -->
 <section class=" text-brown border-y mt-20 md:mt-0">
-  <div class="mx-auto">
+  <div class="">
     <!-- Top Sektion: Navigation og Titel -->
     <div class="flex justify-between items-center md:mb-8">
       <!-- Piletaster -->
@@ -128,7 +161,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <img
           src={vin1.src}
           alt="Jongieux Blanc"
-          class="mx-auto mb-4"
+          class=" mb-4"
         />
         <p class="text-mmb md:text-m">
           2023 Jongieux Blanc, Vin De Savoie AOC, Frankrig
@@ -141,7 +174,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <img
           src={vin2.src}
           alt="Ikon Alvarinho"
-          class="mx-auto mb-4"
+          class=" mb-4"
         />
         <p class="text-mmb md:text-m">
           2020 Ikon, Alvarinho, Fiuza, Tejo, Portugal
@@ -154,7 +187,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <img
           src={vin3.src}
           alt="Canallas Vino Blanco"
-          class="mx-auto mb-4"
+          class=" mb-4"
         />
         <p class="text-mmb md:text-m">
           2023 Canallas Vino Blanco, Valencia DOP, Spanien
@@ -167,7 +200,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <img
           src={vin4.src}
           alt="Vin d'Orange"
-          class="mx-auto mb-4"
+          class=" mb-4"
         />
         <p class="text-mmb md:text-m">
           2023 Vin d'Orange, DR, Øst Frankrig
@@ -180,7 +213,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         <img
           src={vin5.src}
           alt="Zolla Salice Salentino"
-          class="mx-auto mb-4"
+          class=" mb-4"
         />
         <p class="text-mmb md:text-m">
           2021 Zolla, Salice Salentino DOP, Italien
@@ -195,7 +228,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 <!-- Vinklub section -->
 
 <section class="">
-  <div class=" md:mt-20 mb-12 mt-12 md:mb-20 mx-auto grid grid-cols-1 md:grid-cols-7 items-center gap-8">
+  <div class=" md:mt-20 mb-12 mt-12 md:mb-20  grid grid-cols-1 md:grid-cols-7 items-center gap-8">
     <!-- Venstre Content -->
     <div class="md:col-span-3 ml-6 md:ml-16">
       <p class="  text-m md:text-l">
@@ -223,7 +256,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 
   																<!-- Nyhedsbrev section -->
 												<section class="">
-  <div class="mx-auto grid grid-cols-1 md:grid-cols-2 items-center md:gap-14 gap-8">
+  <div class=" grid grid-cols-1 md:grid-cols-2 items-center md:gap-14 gap-8">
     <!-- Venstre Content -->
 	   <div class="flex justify-center">
 			<img class="hidden md:block md:object-cover :w-full h-auto" src={collage.src} alt="Samling af stemningsbilleder">
