--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -9,8 +9,8 @@ const buttonStyling =
 const variantClasses = {
   primary: "border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors",
   secondary: "border-creamywhite hover:bg-brown hover:text-creamywhite hover:border-brown transition-colors",
-  back:"border-none hover:bg-orange hover:text-creamywhite hover:border-none transition-colors",
-  forward:"border-none hover:bg-orange hover:text-creamywhite hover:border-none transition-colors"
+  back:"border-none",
+  forward:"border-none "
 
 };
 
