--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -148,7 +148,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
       <!-- Piletaster -->
       <div class="flex gap-4 ml-6">
   <Button variant="back"></Button>
-  <Button variant="primary"></Button>
+  <Button variant="forward"></Button>
       </div>
       <!-- Titel -->
       <h3 class="">Vinflasker</h3>
