--- a/src/components/Anmeldelser.astro
+++ b/src/components/Anmeldelser.astro
@@ -14,7 +14,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
       <!-- Piletaster -->
       <div class="flex gap-4">
   <Button variant="back"></Button>
-  <Button variant="primary" ></Button>
+  <Button variant="forward" ></Button>
       </div>
       <!-- Titel -->
       <h3 class="text-2xl md:text-3xl font-semibold">Anmeldelser</h3>
