--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -54,7 +54,7 @@ import login from '../assets/images/login.svg';
   <!-- Hamburger Menu til Mobile -->
   <button
     id="menu-toggle"
-    class="md:hidden flex items-center justify-center w-8 h-8 border"
+    class="md:hidden flex items-center justify-center w-8 h-8"
   >
     <!-- Burger Icon -->
     <svg
