--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -30,6 +30,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
         cardimage="roedvin.webp"
         cardimagealt="flasker"
         navn="Rødvinskasse"
+        description="Med rødvinskassen får du rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!"
       ></Abonnementcard>
     </div>
 
@@ -39,7 +40,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
         cardimage="hvidvin.webp"
         cardimagealt="Vinflaske"
         navn="Hvidvinskasse"
-
+        description="Udforsk en verden af smag med fire unikke hvidvine fra forskellige hjørner af kloden. Nyd den livlige Chenin Blanc fra Sydafrikas Coastal Region, den blomstrede Torrontés fra Mendoza i Argentina, den delikate Riesling Spätlese Trocken fra Rheinhessen i Tyskland og den friske Verdejo fra Spaniens DO La Mancha. Denne hvidvinskasse er ideel til en smagfuld oplevelse eller som et eksklusivt indslag på din vinreol!"
       ></Abonnementcard>
     </div>
 
@@ -49,6 +50,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
         cardimage="mixed.webp"
         cardimagealt="Vinflaske"
         navn="Mixedkasse"
+        description="Tag på en smagsrejse med otte udsøgte vine fra hele verden. Nyd frugtig Syrah, elegant Tempranillo, fyldig Touriga Nacional og klassisk Pinotage blandt rødvinene. Fra hvidvinsudvalget venter livlig Chenin Blanc, aromatisk Torrontés, delikat Riesling og sprød Verdejo. En oplagt mulighed for at udforske nye smagsoplevelser eller tilføje et sofistikeret touch til din vinreol!"
       ></Abonnementcard>
     </div>
 
