--- a/src/components/Anmeldelser.astro
+++ b/src/components/Anmeldelser.astro
@@ -10,7 +10,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
 <section class="py-16 px-8">
   <div class="mx-auto space-y-8">
  <!-- Top Sektion: Navigation og Titel -->
-    <div class="flex justify-between items-center mb-8">
+    <div class="flex justify-between items-center mb-8 max-[400px]:flex-col">
       <!-- Piletaster -->
       <div class="flex gap-4">
   <Button variant="back"></Button>
