--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,10 +41,10 @@ import igicon from "../assets/images/ig.svg"
     <!-- Højre Side: Vinabonnement og Sociale Ikoner -->
     <div class="space-y-6">
       <div>
-        <ul class="leading-relaxed space-y-1">
-          <li><a href="#" class="hover:underline text-l">Vinabonnement</a></li>
+        <ul class="space-y-1">
+          <li><a href="/abonnement" class="hover:underline text-l">Vinabonnement</a></li>
           <li><a href="#" class="hover:underline text-l">Vinshop</a></li>
-          <li><a href="#" class="hover:underline text-l">Om os</a></li>
+          <li><a href="/om" class="hover:underline text-l">Om os</a></li>
         </ul>
       </div>
       <!-- Sociale Ikoner -->
