--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -14,7 +14,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 ---
 <MainLayout title="Vinabonnement">
 	<article class="">
-    <h1 class="mb-12 md:ml-8 ml-8 md:mt-24 mt-16">
+    <h1 class="mb-12 md:ml-8 ml-8 md:mt-24 mt-16 overflow-hidden">
       VINABONNEMENT
     </h1>
 															    <!-- VINABONNEMENTER DISPLAY -->
@@ -23,7 +23,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
   <div class="">
 
     <!-- CARDS -->
-  <section class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 gap-4">
+  <section class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3">
     <!-- 1 Card -->
     <div class="card group" data-card="1">
       <Abonnementcard
