--- a/src/components/abonnementcard.astro
+++ b/src/components/abonnementcard.astro
@@ -12,7 +12,7 @@ import Link from "../components/Link.astro";
             <img src={cardimage} alt={cardimagealt} class="object-cover w-full">
         </div>
         <div class="">
-    <h4 class="">{navn}</h4>
+    <h4 class="md:pb-8">{navn}</h4>
     </div>
     </div>  
       
