--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -14,9 +14,12 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 ---
 <MainLayout title="Vinabonnement">
 	<article class="">
-    <h1 class="mb-12 md:ml-8 ml-8 md:mt-24 mt-16">
+    <h1 class="ml-8 md:mt-24 mt-16">
       VINABONNEMENT
     </h1>
+    <p class="mb-12 ml-8 mr-8 md:mr-[800px] text-mmb md:text-l ">
+      Med vores vinabonnement får du mulighed for at smage forskellige vine hver måned. Vi udvælger og sammensætter tre forskellige vinkasser, som du kan vælge imellem.
+    </p>
 															    <!-- VINABONNEMENTER DISPLAY -->
 <section class="">
   
