--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -14,7 +14,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 ---
 <MainLayout title="Vinabonnement">
 	<article class="">
-    <h1 class="mb-12 md:ml-8 ml-8 md:mt-24 mt-16 overflow-hidden">
+    <h1 class="ml-8 md:mt-24 mt-16">
       VINABONNEMENT
     </h1>
     <p class="mb-12 ml-8 mr-8 md:mr-[800px] text-mmb md:text-l ">
