--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -8,7 +8,7 @@ const buttonStyling =
 // border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors
 const variantClasses = {
   primary: "border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors",
-  secondary: "border-creamywhite hover:bg-brown hover:text-creamywhite hover:border-brown transition-colors",
+  secondary: "border-creamywhite hover:bg-creamywhite hover:text-brown hover:creamywhite transition-colors",
   back:"border-none",
   forward:"border-none "
 
