--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -29,7 +29,7 @@ import login from '../assets/images/login.svg';
       <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
     </svg>
   </a>
-  <div class="absolute hidden group-hover:block bg-creamywhite pt-2 w-40">
+  <div class="absolute hidden group-hover:block bg-creamywhite pt-2 w-40 z-40">
     <a href="/rodwin" class="block px-4 py-2 hover:underline">Rødvinskasse</a>
     <a href="/rodwin" class="block px-4 py-2 hover:underline">Hvidvinskasse</a>
     <a href="/rodwin" class="block px-4 py-2 hover:underline">Mixkasse</a>
@@ -92,7 +92,7 @@ import login from '../assets/images/login.svg';
 </div>
 
 <!-- Søge felt -->
-<div class="my-2 border-b border-brown">
+<div class="border-b border-brown">
   <div class="flex items-center px-2 md:px-8">
     <svg
       xmlns="http://www.w3.org/2000/svg"
