--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -111,7 +111,7 @@ Leveringsdag: Sidste torsdag i måneden </p>
 
 															    <!--  ANMELDELSER -->
 
-<section>
+<section class="border-t" >
   <Anmeldelser></Anmeldelser>
 </section>
 
