--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -14,10 +14,10 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 ---
 <MainLayout title="Vinabonnement">
 	<article class="">
-    <h1 class="ml-8 md:mt-24 mt-16">
+    <h1 class="ml-8 md:ml-14 md:mt-24 mt-16">
       VINABONNEMENT
     </h1>
-    <p class="mb-12 ml-8 mr-8 md:mr-[800px] text-mmb md:text-l ">
+    <p class="mb-12 ml-8 md:ml-14 mr-8 md:mr-[800px] text-mmb md:text-l ">
       Med vores vinabonnement får du mulighed for at smage forskellige vine hver måned. Vi udvælger og sammensætter tre forskellige vinkasser, som du kan vælge imellem.
     </p>
 															    <!-- VINABONNEMENTER DISPLAY -->
@@ -63,7 +63,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 
                                                                <!-- Abonnement beskrivelse-->
   <!-- Dynamisk section  -->
-  <section id="dynamicContent" class="bg-brown text-creamywhite py-8 px-8 hidden md:block">
+  <section id="dynamicContent" class="bg-brown text-creamywhite py-16 px-8 hidden md:block">
     <div class="mx-auto grid grid-cols-1 md:grid-cols-5 gap-8">
       <!-- Venstre Content -->
       <div class="md:col-span-3">
