--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -10,7 +10,7 @@ import igicon from "../assets/images/ig.svg"
 
 ---
 <MainLayout title="Titel">
-  <article class="mx-auto px-4 md:px-8 py-8">
+  <article class="mx-auto px-4 md:px-8">
 
     <!-- Første Sektion -->
 	     <h1 class="mb-4 md:mb-6 b-12 ml-6 md:mr-0 md:mt-24 mt-16">
