--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -74,8 +74,9 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!        </p>
     
         <div class="mt-4">
-          <Button variant="secondary">Køb nu</Button>
+          <a href="/abonnement"><Button variant="secondary">Køb nu</Button></a>
         </div>
+
       </div>
 
       <!-- Højre Content -->
