--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -301,9 +301,9 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         Når du bliver abonnent hos os, bliver du samtidig en del af vores vinklub.  Vi mødes én gang hver måned og smager på næste måneds vin, så du får mulighed for at tilpasse din næste vinkasse til dine ønsker og behov. Derudover udveksler vi erfaringer og viden om vin og har nogle hyggelige stunder sammen.
       </p>     
     
-        <div class="mt-4 ">
-              <Button>Bliv abonnent</Button>
-        </div>
+        <div class="mt-4">
+<a href="/abonnement"><Button>Bliv abonnent</Button></a>
+       </div>
 
     </div>
 
