--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -155,7 +155,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
           La Mancha, Spanien <span class="">2018</span>
         </h3>
         <div class="mt-4">
-          <Button variant="secondary">Køb nu</Button>
+          <a href="/betal"><Button variant="secondary">Køb nu</Button></a>
         </div>
       </div>
 
